fix input date on mobile

--- a/apps/the-dream-book-frontend/.vitepress/theme/style.css
+++ b/apps/the-dream-book-frontend/.vitepress/theme/style.css
@@ -128,9 +128,11 @@ p {
 
 
 input, textarea {
+  width: 100%;
   padding: .5em;
   border-radius: 8px;
   border: 1px solid black;
+  background-color: white;
 }
 
 textarea {
